k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: membership-blog-service
spec:
  type: ClusterIP
  selector:
    app: membership-blog-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
